<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    tools:theme="@style/Theme.Material3.DayNight.NoActionBar">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBackdrop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/backdrop" />

    <ImageView
        android:id="@+id/imgFavourite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="-24dp"
        android:elevation="@dimen/margin_regular"
        android:src="@drawable/ic_favourite_inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBackdrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgFavourite">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_regular"
                android:layout_marginVertical="@dimen/margin_small"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_condensed_bold"
                android:maxLines="2"
                android:textAlignment="viewStart"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Guy Ritchie's The Covenant" />

            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/roboto_condensed_regular"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieName"
                tools:text="@string/place_holder" />

            <TableLayout
                android:id="@+id/layoutInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:gravity="center_horizontal"
                android:stretchColumns="*"
                app:layout_constraintTop_toBottomOf="@id/tvTagLine">

                <TableRow>

                    <TextView
                        android:id="@+id/tvVoteCountTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:gravity="center"
                        android:text="@string/rating"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvReleaseDateTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_condensed_regular"
                        android:gravity="center"
                        android:text="@string/publish_date"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/tvVoteCount"
                        style="@style/TextContent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="@string/place_holder" />

                    <TextView
                        android:id="@+id/tvReleaseDate"
                        style="@style/TextContent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        tools:text="@string/place_holder" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tvOverViewTitle"
                style="@style/SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutInformation" />

            <TextView
                android:id="@+id/tvOverView"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOverViewTitle"
                tools:text="@string/long_place_holder" />

            <TextView
                android:id="@+id/tvGenresTitle"
                style="@style/SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_regular"
                android:text="@string/genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOverView" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/padding_regular"
                android:visibility="visible"
                app:chipSpacing="@dimen/margin_medium"
                app:chipSpacingVertical="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/tvGenresTitle"
                tools:background="@color/primary_color"
                tools:layout_height="@dimen/margin_regular" />

            <TextView
                android:id="@+id/tvSpokenLanguageTitle"
                style="@style/SmallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_regular"
                android:layout_marginTop="@dimen/margin_regular"
                android:text="@string/spoken_lang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipGroupGenres" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipSpokenLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/padding_regular"
                android:paddingVertical="2dp"
                android:visibility="visible"
                app:chipSpacing="@dimen/margin_medium"
                app:chipSpacingVertical="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@id/tvSpokenLanguageTitle"
                tools:background="@color/primary_color"
                tools:layout_height="@dimen/margin_regular" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/primary_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/imgBackdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imgBackdrop" />

</androidx.constraintlayout.widget.ConstraintLayout>
